/**
 * Copyright 2020 Inrupt Inc.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal in
 * the Software without restriction, including without limitation the rights to use,
 * copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the
 * Software, and to permit persons to whom the Software is furnished to do so,
 * subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
 * INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
 * PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
 * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
 * OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
 * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */

import React from "react";
import { useRouter } from "next/router";
import { renderWithTheme } from "../../__testUtils/withTheme";
import ContainerTable from "./index";

jest.mock("next/router");
const mockedRouter = useRouter;

describe("ContainerTable", () => {
  const containerPath = "containerPath";
  const resourcePath = "resourcePath";

  it("renders a table view without data", () => {
    const data = [];

    const { asFragment } = renderWithTheme(
      <ContainerTable
        containerPath={containerPath}
        data={data}
        resourcePath={resourcePath}
      />
    );
    expect(asFragment()).toMatchSnapshot();
  });

  it("renders a table with data", () => {
    mockedRouter.mockReturnValue({ query: { resourceIri: "test" } });
    const data = [
      { iri: "https://myaccount.mypodserver.com/inbox", name: "inbox" },
      { iri: "https://myaccount.mypodserver.com/private", name: "private" },
      { iri: "https://myaccount.mypodserver.com/note.txt", name: "note.txt" },
    ];

    const { asFragment } = renderWithTheme(
      <ContainerTable
        containerPath={containerPath}
        data={data}
        resourcePath={resourcePath}
      />
    );
    expect(asFragment()).toMatchSnapshot();
  });
});
